added dued status

--- a/style/main.css
+++ b/style/main.css
@@ -42,6 +42,10 @@ h1{
     background-color: #ffdead;
 }
 
+.dued{
+    background-color: #ff8c69;
+}
+
 h3{
     width: 100%;
     background-color: orange;
